# PCSC

./: .cvsignore  .gitignore  AUTHORS  COPYING  ChangeLog  DRIVERS  HELP  Makefile.am  Makefile.in  NEWS  README  README.md  SECURITY  TODO  bootstrap  c.sh  clang-analyze.sh  config.h.in  configure  configure.ac  configure.in  meson.build  meson.options  reconf  splint.sh
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  build_meson.yml
UnitaryTests/: .pylintrc  BufferOverflow.c  BufferOverflow2.c  BufferOverflow_SCardControl.c  BufferOverflow_SCardGetAttrib.c  BufferOverflow_SCardTransmit.c  CheckAutoPowerOff.py  FEATURE_CCID_ESC_COMMAND.py  FEATURE_CCID_ESC_COMMAND2.py  FEATURE_CCID_ESC_COMMAND_Gemalto_features.py  FEATURE_CCID_ESC_COMMAND_Xiring.py  FEATURE_GET_TLV_PROPERTIES.py  MCT_ReaderDirect.py  Makefile  SCardBeginTransaction.c  SCardBeginTransaction_Disconnect.py  SCardBeginTransaction_ExclusiceMode.py  SCardBeginTransaction_Reset.py  SCardBeginTransaction_SharedMode.py  SCardBeginTransaction_deadlock.py  SCardBlockingBehaviourTest.py  SCardCancel.c  SCardCancel.py  SCardCancel2.py  SCardCancel3.py  SCardConnect_DIRECT.py  SCardConnect_DIRECT2.py  SCardEndTransaction_extra_call.py  SCardExclusiveBehaviour.py  SCardGetAttrib.py  SCardGetStatusChange.py  SCardGetStatusChange2.py  SCardReconnect.py  SCardStatus.py  SCard_RemovedReader.py  SCard_fork.py  ThreadSafe.py  ThreadSafeConnect.py  control_get_firmware.py  control_switch_interface.py  (+7 more)
UnitaryTests/SCardGetStatusChange/: SCardGetStatusChange.py  SCardGetStatusChange_PnP.py  SCardGetStatusChange_PnP_Events.py  SCardGetStatusChange_loop.py  SCardGetStatusChange_nonBlock.py
doc/: .cvsignore  Makefile.am  Makefile.in  README.DAEMON  README.polkit  bundleTool.1  doxygen.conf.in  doxygen.css  formaticc.1  ifdhandler-3.tex  org.debian.pcsc-lite.policy  pcsc-lite.bib  pcsc-lite.tex  pcscd.8.in  pcscd.startup  reader.conf.5.in  update-reader.conf.8  update-reader.conf.8.in  update.sh
doc/example/: .cvsignore  Makefile.am  pcsc_demo.c
etc/: .cvsignore  Makefile.am  Makefile.in  SmartcardServices  StartupParameters.plist  fr.apdu.pcsclite.metainfo.xml  pcscd  pcscd-sysusers.conf  pcscd.init.in  pcscd.service.in  pcscd.socket.in  pcscd.startup  reader.conf.in  update-reader.conf.in
libmusclecard/: .cvsignore  Makefile.am
libmusclecard/doc/: Makefile.am
libmusclecard/src/: .cvsignore  Makefile.am  libmusclecard.pc.in  musclecard.c  muscletest.c  tokenfactory.c  tokenfactory.h
libmusclecard/src/PCSC/: mscdefines.h  musclecard.h
libmusclecard/utils/: Makefile.am
libmusclecard/utils/bundleTool/: .cvsignore  Makefile.am  bundleTool.8.in  bundleTool.c
m4/: Makefile.am
make-dirs/: Makefile.solaris  README  config.h
pbx/: config.h
pbx/PCSC.pbproj/: project.pbxproj
pcsc.pbproj/: project.pbxproj
src/: .cvsignore  Makefile.am  Makefile.in  README_INTERNALS.txt  atrhandler.c  atrhandler.h  auth.c  auth.h  configfile.c  configfile.h  configfile.l  debug.c  debug.h  debuglog.c  driverparser.c  driverparser.l  dyn_bsd.c  dyn_generic.h  dyn_hpux.c  dyn_macosx.c  dyn_unix.c  dyn_win32.c  error.c  eventhandler.c  eventhandler.h  g_defines.c  hotplug.h  hotplug_generic.c  hotplug_libhal.c  hotplug_libudev.c  hotplug_libusb.c  hotplug_linux.c  hotplug_macosx.c  ifdwrapper.c  ifdwrapper.h  lassert.h  libfake.c  libpcsclite.pc.in  libredirect.c  misc.h  (+42 more)
src/PCSC/: .cvsignore  debuglog.h  dyn_generic.h  ifdhandler.h  parser.h  pcsclite.h.in  reader.h  reader.h.in  sys_generic.h  thread_generic.h  winscard.h  wintypes.h
src/spy/: Makefile.am  README.txt  install_spy.sh  libpcscspy.c  pcsc-spy  pcsc-spy.1  pcsc-spy.c  pcsc-spy.pod  pcsc-spy.py  setup_spy.sh  uninstall_spy.sh
src/utils/: .cvsignore  Makefile.am  Makefile.in  README  formaticc.c  installifd.c  sample.ibm  sample.in  sample.out
win32/: Makefile.am  PCSC.cpp  PCSC.dsp  PCSC.h  StdAfx.cpp  StdAfx.h  config.h  pthread.h  sched.h  win32_config.h  win32_pcsclite.h
